force-app/main/default/objects/nuHome_Billing__c/nuHome_Billing__c.object-meta.xml
<CustomObject>
    <description>Billing Object to transition from Accounting Seed and intacct</description>
    <label>nuHome Billing</label>
    <nameField>
        <displayFormat>NH-BL-{000000}</displayFormat>
        <label>nuHome Billing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>nuHome Billings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>