force-app/main/default/objects/nuHome_Billing__c/fields/Intacct_Distributed_date__c.field-meta.xml
<CustomField>
    <fullName>Intacct_Distributed_date__c</fullName>
    <label>Intacct Distributed date</label>
    <type>Date</type>
</CustomField>