force-app/main/default/objects/nuHome_Billing__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>nuHome Billings</relationshipLabel>
    <relationshipName>nuHome_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>