force-app/main/default/objects/nuHome_Billing__c/fields/Invoice_paid_date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_paid_date__c</fullName>
    <label>Invoice paid date</label>
    <type>Date</type>
</CustomField>