force-app/main/default/objects/nuHome_Billing__c/fields/isProcessed__c.field-meta.xml
<CustomField>
    <fullName>isProcessed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>used to skip the billing process if true</inlineHelpText>
    <label>isProcessed</label>
    <type>Checkbox</type>
</CustomField>