force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Branch__c.field-meta.xml
<CustomField>
    <fullName>Lead_Branch__c</fullName>
    <formula>Inventory__r.fAccount_Branch__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Branch</label>
    <type>Text</type>
</CustomField>