force-app/main/default/objects/nuHome_Billing__c/fields/Lead_City__c.field-meta.xml
<CustomField>
    <fullName>Lead_City__c</fullName>
    <formula>Inventory__r.fAccount_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: City</label>
    <type>Text</type>
</CustomField>