force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Email__c.field-meta.xml
<CustomField>
    <fullName>Lead_Email__c</fullName>
    <formula>Inventory__r.fAccount_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Email</label>
    <type>Text</type>
</CustomField>