force-app/main/default/objects/nuHome_Billing__c/fields/Lead_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_First_Name__c</fullName>
    <formula>Inventory__r.fAcoountNameFirst__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: First Name</label>
    <type>Text</type>
</CustomField>