force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Industry__c.field-meta.xml
<CustomField>
    <fullName>Lead_Industry__c</fullName>
    <formula>Inventory__r.fBilling_Opp_Industry__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Industry</label>
    <type>Text</type>
</CustomField>