force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Lead_Last_Name__c</fullName>
    <formula>Inventory__r.fAcoountNameLast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Last Name</label>
    <type>Text</type>
</CustomField>