force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Lead_Mobile__c</fullName>
    <formula>Inventory__r.fAccount_Mobile__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Mobile</label>
    <type>Text</type>
</CustomField>