force-app/main/default/objects/nuHome_Billing__c/fields/Lead_MSA__c.field-meta.xml
<CustomField>
    <fullName>Lead_MSA__c</fullName>
    <formula>Inventory__r.fMSA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: MSA</label>
    <type>Text</type>
</CustomField>