force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Phone__c.field-meta.xml
<CustomField>
    <fullName>Lead_Phone__c</fullName>
    <formula>Inventory__r.fAccount_Phone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Phone</label>
    <type>Text</type>
</CustomField>