force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lead_Rate__c</fullName>
    <formula>Inventory__r.Product_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>