force-app/main/default/objects/nuHome_Billing__c/fields/Lead_State__c.field-meta.xml
<CustomField>
    <fullName>Lead_State__c</fullName>
    <formula>Inventory__r.fAccount_State__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: State</label>
    <type>Text</type>
</CustomField>