force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Street__c.field-meta.xml
<CustomField>
    <fullName>Lead_Street__c</fullName>
    <formula>Inventory__r.fAccount_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Street</label>
    <type>Text</type>
</CustomField>