force-app/main/default/objects/nuHome_Billing__c/fields/Lead_Zip__c.field-meta.xml
<CustomField>
    <fullName>Lead_Zip__c</fullName>
    <formula>Inventory__r.fAccount_Zip__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lead: Zip</label>
    <type>Text</type>
</CustomField>