force-app/main/default/objects/nuHome_Billing__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>nuHome Billings</relationshipLabel>
    <relationshipName>nuHome_Billings</relationshipName>
    <type>Lookup</type>
</CustomField>