force-app/main/default/objects/nuHome_Billing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Lead_Type__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>