force-app/main/default/objects/nuHome_Billing__c/listViews/SUBSPECCPL.listView-meta.xml
<ListView>
    <fullName>SUBSPECCPL</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Lead_Type__c</columns>
    <columns>Rate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <filters>
        <field>Lead_Type__c</field>
        <operation>contains</operation>
        <value>SUB</value>
    </filters>
    <label>SUBSPECCPL</label>
</ListView>